--- a/item.html
+++ b/item.html
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <a href="#" class="link-txt">Back To Products</a>
+      <a href="product.html" class="link-txt">Back To Products</a>
 
     </div>
   </main>
